WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
23500
KURL::parse() incorrectly compares its result to original string
https://bugs.webkit.org/show_bug.cgi?id=23500
Summary
KURL::parse() incorrectly compares its result to original string
Alexey Proskuryakov
Reported
2009-01-23 05:25:06 PST
KURL::parse() has an optimization, where it reuses an original String if parsing didn't change it. But the sting comparison is incorrect, as it doesn't check that string lengths are the same: if (originalString && strncmp(buffer.data(), url, m_fragmentEnd) == 0) Unfortunately, if I fix this bug, I'm getting a regression in fast/loader/url-parse-1.html.
Attachments
damn the torpedoes
(2.88 KB, patch)
2009-02-26 09:59 PST
,
Alexey Proskuryakov
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2009-02-26 09:59:01 PST
Created
attachment 28019
[details]
damn the torpedoes See also
bug 22731
.
Darin Adler
Comment 2
2009-02-26 11:09:03 PST
Comment on
attachment 28019
[details]
damn the torpedoes r=me
Alexey Proskuryakov
Comment 3
2009-02-26 11:41:09 PST
Committed revision 41262.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug