        Reviewed by Darin Adler.

https://bugs.webkit.org/show_bug.cgi?id=23500
        KURL::parse() incorrectly compares its result to original string

        * platform/KURL.cpp: (WebCore::KURL::parse): Take string length into account.



Canonical link: https://commits.webkit.org/33337@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@41262 268f45cc-cd09-0410-ab3c-d52691b4dbfc